added more in about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -18,7 +18,7 @@
     
     <img class="portrait" src=" /img/cat.png" />
 
-    <p style= "font-style: italic">I am a Cat</p>
+    <p style= "font-style: italic">I am a Cat. This app uses data from mapbox.com and darksky.net. </p>
     </div>
    
     
